GetAllPlayers at /player/all (cache 120m)
